# documember

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: black.yml  pyright.yml
src/: documember.py
