[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "documember"
description = "A little tool to find those members that need documentation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.scripts]
documember = "documember:main"

[project.urls]
"Homepage" = "https://github.com/thegamecracks/documember"
"Issue Tracker" = "https://github.com/thegamecracks/documember/issues"

[tool.setuptools_scm]
